mugshots anders verdeelt over pagina (weet nog niet)

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,12 +72,12 @@ header img{
 }
 
 .mugshot{
-    width: 15%;
+    width: 18%;
     aspect-ratio: 1 / 1;
     position: relative;
     overflow: hidden;
     border-radius: 10px;
-
+    margin: 0.3rem auto;
 }
 
 
