--- a/styles/style.css
+++ b/styles/style.css
@@ -343,22 +343,33 @@ button[type="submit"] {
         align-items: center;
         margin-top: 20px
     }
-    .madeby {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
     .logo {
-        display: flex;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        align-self: center;
+        justify-self: left;
         width: 40%;
         height: auto;
-        margin: 0 auto;
+    }
+    .madeby {
+        font-size: 1rem;
+        justify-self: end;
+        align-self: center;
+
     }
     .roxy {
         margin-top: 5px;
     }
         .wave3 {
         margin-bottom: -17%;
+    }
+    .logo-madeby {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-self: end;
+        gap: 20px;
+        
     }
 } 
 
