--- a/styles/style.css
+++ b/styles/style.css
@@ -338,10 +338,9 @@ button[type="submit"] {
     margin: 4px 2px;
     cursor: pointer;
 }
-/* responsiveness*/
-@media only screen and (max-width: 1500px) {
 
-}
+/* responsiveness*/
+@media only screen and (max-width: 1500px) {}
 
 @media only screen and (max-width: 789px) {
 
@@ -354,6 +353,7 @@ button[type="submit"] {
         align-items: center;
         margin-top: 20px
     }
+
     .navigation {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -362,6 +362,7 @@ button[type="submit"] {
         margin: 0px;
         padding: 0px;
     }
+
     header li {
         padding: 0px;
     }
@@ -382,14 +383,16 @@ button[type="submit"] {
 
     }
 
-     header nav {
+    header nav {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
+
     .wave3 {
         margin-bottom: -20%;
     }
+
     .roxy {
         margin-top: 5px;
     }
