--- a/styles/style.css
+++ b/styles/style.css
@@ -255,12 +255,10 @@ footer {
 
 .wrapper-location,
 .location-image {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 0px;
     gap: 10px;
-    justify-content: center;
-    width: auto;
 }
 
 .hotspots {
@@ -275,15 +273,16 @@ footer {
 
 .location-image {
     position: relative;
-    width: 20%;
+    width: 100%;
     background: black;
-    border-radius: 10px;
     object-fit: cover;
     aspect-ratio: 1/1;
+    border-radius: 10px;
 }
 
 .wrapper-location {
     margin-bottom: 10%;
+    padding: 3%;
 }
 
 img {
@@ -309,10 +308,10 @@ nav img {
     text-align: center;
 }
 
-article {
-    margin-top: 20px;
-}
+.grid-image {
+    display: grid;
 
+}
 
 section input[type="search"] {
     border: solid 3px #000000;
@@ -352,6 +351,14 @@ button[type="submit"] {
         justify-content: center;
         align-items: center;
         margin-top: 20px
+    }
+
+    .wrapper-location,
+    .location-image {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0px;
+        gap: 10px;
     }
 
     .navigation {
