eye-bar beter geplaatst

--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,14 @@ article button:hover {
     top: 24%;
 }
 
+.koop{
+    top: 20%;
+}
+
+.justus{
+    top: 22%;
+}
+
 #docenten {
     visibility: visible;
 }
