--- a/styles/style.css
+++ b/styles/style.css
@@ -399,28 +399,15 @@ nav img {
 }
 
 section input[type="search"] {
+    padding: 10px;
     border: solid 3px #000000;
     box-sizing: border-box;
-    font-size: 1.5em;
+    font-size: 1rem;
     height: 34px;
     outline: solid #fc0 0;
-    width: 15vw;
+    width: 80vw;
+    max-width: 300px;
     margin-top: 20px;
-}
-
-button[type="submit"] {
-    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
-    border-radius: 10px;
-    background-color: #afbcc9;
-    border: none;
-    color: white;
-    padding: 15px 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
 }
 
 @media only screen and (min-width: 1500px) {
