--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@ a {
     list-style: none;
 }
 
+
 header nav {
     display: flex;
     justify-content: space-between;
@@ -109,6 +110,30 @@ header img {
     font-size: 1rem;
     justify-self: right;
     padding: 10px;
+    
+}
+
+.card-tekst3 {
+    grid-column-start: 1;
+    grid-column: span 2;
+    grid-row-start: 2;
+    justify-self: center;
+    align-self: center;
+    font-size: .8rem;
+    padding: 5px 10px;
+    color: rgb(141, 232, 255);
+    border-bottom: 3px solid white;
+    border-top: 3px solid white;
+}
+
+.card-tekst4 {
+    grid-column-start: 1;
+    grid-column: span 2;
+    grid-row-start: 3;
+    justify-self: center;
+    align-self: center;
+    font-size: .6rem;
+    padding: 0px 10px;
 }
 
 .mugshot {
@@ -142,18 +167,8 @@ header img {
     z-index: 1000;
 }
 
-.mugshot p {
-    color: white;
-    z-index: 1;
-}
 
-.mugshot a {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    color: white;
-    z-index: 1;
-}
+
 
 .docenten .link-icon {
     position: absolute;
@@ -236,9 +251,9 @@ article button:hover {
     z-index: 10000;
     position: absolute;
     bottom: 8%;
-    left: 27%;
-    width: 45%;
-    height: 30%;
+    left: 20%;
+    width: 60%;
+    height: 35%;
     opacity: 0;
     z-index: 100;
     transition: 0.5s ease;
@@ -473,6 +488,15 @@ section input[type="search"] {
         grid-template-rows: 1fr 1fr;
     }
 
+    .mugshot-after {
+        opacity: 1;
+    }
+    .card-info {
+        opacity: 1;
+    }
+    .eye-bar {
+        opacity: 1;
+    }
     .wave3 {
         margin-bottom: -20%;
     }
@@ -492,7 +516,46 @@ section input[type="search"] {
     .container-docenten .mugshot {
         width: 45%;
     }
+    .card-tekst1 {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    justify-self: left;
+    font-size: 1rem;
+    padding: 10px;
 
+}
+
+.card-tekst2 {
+    grid-column-start: 2;
+    grid-row-start: 1;
+    font-size: 1rem;
+    justify-self: right;
+    padding: 10px;
+    
+}
+
+.card-tekst3 {
+    grid-column-start: 1;
+    grid-column: span 2;
+    grid-row-start: 2;
+    justify-self: center;
+    align-self: center;
+    font-size: .8rem;
+    color: blue;
+    padding: 5px 10px;
+    border-bottom: 3px solid white;
+    border-top: 3px solid white;
+}
+
+.card-tekst4 {
+    grid-column-start: 1;
+    grid-column: span 2;
+    grid-row-start: 3;
+    justify-self: center;
+    align-self: center;
+    font-size: .7rem;
+    padding: 0px 10px;
+}
     .mugshot {
         width: 45%;
         /*hier werkt het wel */
@@ -503,4 +566,8 @@ section input[type="search"] {
     .mugshot {
         width: 100%;
     }
+}
+.mugshot p {
+    color: white;
+    z-index: 1;
 }
