--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,10 @@ header img {
     margin-bottom: -13%;
 }
 
+.wave4 {
+    margin-bottom: -200px;
+}
+
 /*Wave styling*/
 .wave1,
 .wave2 {
@@ -148,34 +152,38 @@ header img {
   position: relative;
   text-align: center;
   overflow: hidden;
-  padding: 20px 20px;
-  background-color: #F5F1EA; /* fallback kleur */
+  padding: 40px 20px;
+  background-color: #F5F1EA;
+  width: 80%;
+  margin-left: 155px;
 }
 
 .background-collage {
   position: absolute;
   top: 0; left: 0;
-  width: 100%; height: 100%;
+  width: 100%; 
+  height: 100%;
   display: grid;
   gap: 5px;
-  filter: blur(12px) brightness(1);
+  filter: blur(11px) brightness(1);
   z-index: 1;
   overflow: hidden;
+ border: 10px solid black
 }
 
 .background-collage img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .welcome-section h1,
 .welcome-section p {
   position: relative;
   z-index: 2;
-  color: #ffffff; /* wit voor contrast */
+  color: #ffffff;
 }
-
 
 .mugshot {
     width: 22%;
@@ -569,15 +577,22 @@ section input[type="search"] {
     .mugshot-after {
         opacity: 1;
     }
+
     .card-info {
         opacity: 1;
     }
+
     .eye-bar {
         opacity: 1;
     }
+
     .wave3 {
         margin-bottom: -20%;
     }
+
+    .wave4 {
+        margin-bottom: -20%;
+    }   
 
     .roxy {
         margin-top: 5px;
